--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,125 @@
 body {
-  font-size: 16px;
+  margin: 0;
+  font-size: 22px;
   display: block;
+  background-color: black;
+  font-family: "Helvetica", sans-serif;
+  text-align: center;
+  color: white;
+}
+
+header {
+  position: fixed;
+  background-color: black;
+  color: white;
+  height: 69px;
+  border-bottom: 1px solid seashell;
+  width: 100%;
+  align-items: center;
+  z-index: 1;
+}
+
+.flex-contanier {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+Header img {
+  height: 50px;
+  padding-left: 20px;
+}
+
+nav {
+  text-align: right;
+  flex-grow: 1;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+header nav a {
+  color: white;
+  }
+
+#main-contanier {
+  padding-top: 75px;
+  opacity: 0.7;
+  width: 1200px;
+  margin: auto;
+}
+
+#mission {
+  height: 700px;
+  background-image: url("../images/img-mission-background.jpg");
+  padding-top: 75px;
+}
+
+#mission-title {
+  color: white;
+  background-color: black;
+  align-content: center;
+  margin: auto;
+  width: 100%;
+}
+
+#feature {
+  width: 1000px;
+  height: 700px;
+  padding: 50px 0px;
+  margin: auto;
+}
+
+.tea {
+  padding: 10px;
+}
+.tea img {
+  height: 200px;
+  width: 300px;
+  padding-bottom: 10px;
+}
+
+#location {
+  height: 500px;
+  background-image: url("../images/img-locations-background.jpg");
+  margin-top: 50px;
+  padding-top: 50px;
+}
+
+#loc-list {
+  margin: auto;
+  width: 1100px;
+}
+
+#location h2 {
+  text-align: center;
+  margin: 0px;
+  padding: 10px;
+}
+.store {
+  display: flex;
+  margin: 15px 25px;
+  flex-basis: 280px;
+  flex-direction: column;
+  color: white;
+  background-color: black;
+  opacity: 1;
+  justify-content: center;
+}
+
+footer {
+  margin: auto;
+  width: 100%
+  align-content: center;
+}
+
+footer #contact {
+  height: 200px;
+}
+
+footer #copyright {
+  padding-left: 25px;
+  text-align: left;
 }
